Issue #2885615 by thejimbirch, drupalfan2: Navigation arrows not centered on slide show with very wide pictures

--- a/css/bootstrap-paragraphs.css
+++ b/css/bootstrap-paragraphs.css
@@ -328,6 +328,10 @@
 }
 /* Carousel Paragraph. */
 /* paragraph--bp-carousel.html.twig */
+/* Adds float so it behaves like the rest of the Paragraphs. */
+.paragraph--type--bp-carousel {
+  float: left;
+}
 /* Removes padding-left/padding-right added by column widths. */
 .paragraph.paragraph--width--tiny.paragraph--type--bp-carousel > .carousel-inner,
 .paragraph.paragraph--width--narrow.paragraph--type--bp-carousel > .carousel-inner,
